--- a/miniprogram/pages/home/home.wxss
+++ b/miniprogram/pages/home/home.wxss
@@ -44,17 +44,21 @@
 信息列表布局
 */
 .organization-cell {
+  width: 100%;
+}
+
+.organization-cell-content {
   display: flex;
   width: 100%;
-  padding-top: 4px;
-  padding-bottom: 4px;
+  padding-top: 11px;
+  padding-bottom: 11px;
 }
 
 .organization-avatar {
-  width: 45px;
-  height: 45px;
+  width: 52px;
+  height: 52px;
   margin-left: 16px;
-  border-radius: 5px;
+  border-radius: 10px;
   align-self: center;
 }
 
@@ -62,8 +66,9 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  margin-left: 10px;
-  flex-basis: calc(100vw - 71px);
+  margin-left: 14px;
+  margin-right: 14px;
+  flex-basis: calc(100vw - 16px - 52px - 14px - 14px);
 }
 
 .organization-info-head {
@@ -73,13 +78,14 @@
 }
 
 .organization-info-name {
-
+  font-size: 19px;
 }
 
 .organization-news-time {
+  color: #AAAAAA;
   margin-right: 16px;
 }
 
 .organization-news {
-
+  color: #AAAAAA;
 }
