--- a/miniprogram/pages/home/home.wxml
+++ b/miniprogram/pages/home/home.wxml
@@ -11,7 +11,7 @@
 
   <recycle-view class="organization-list" batch="{{batchSetRecycleData}}" id="recycleId">
     <recycle-item wx:for="{1,2,3}" wx:key="id" class="organization-cell">
-      <view class="organization-cell-content">
+      <navigator url="../organization/organization" open-type="navigate" class="organization-cell-content">
         <image class="organization-avatar" src="https://i.loli.net/2021/05/01/DsYnxAElyjG8RNI.jpg"></image>
         <view class="organization-info">
           <view class="organization-info-head">
@@ -20,7 +20,7 @@
           </view>
           <label class="organization-news">最新公告：无限列车今晚上映！</label>
         </view>
-      </view>
+      </navigator>
     </recycle-item>
   </recycle-view>
 
