--- a/miniprogram/pages/home/home.wxml
+++ b/miniprogram/pages/home/home.wxml
@@ -10,7 +10,7 @@
   </view>
 
   <recycle-view class="organization-list" batch="{{batchSetRecycleData}}" id="recycleId">
-    <recycle-item wx:for="{1,2,3}" wx:key="id" class="organization-cell">
+    <recycle-item wx:for="{{[1,2,3,4,5,6,7,8,9]}}" wx:key="*this" class="organization-cell">
       <navigator url="../organization/organization" open-type="navigate" class="organization-cell-content">
         <image class="organization-avatar" src="https://i.loli.net/2021/05/01/DsYnxAElyjG8RNI.jpg"></image>
         <view class="organization-info">
