公告页面添加

--- a/miniprogram/pages/organization/member/member.wxml
+++ b/miniprogram/pages/organization/member/member.wxml
@@ -6,7 +6,7 @@
       <view class="section-item-header">{{item}}</view>
         <!--该首字母的成员-->
         <view wx:for="{{['阿柒','伍六七','大宝']}}" wx:key="unique" wx:for-item="cell" wx:for-index="cellIndex" class="section-item-cells">
-          <view class="section-item-cell {{cellIndex != (item.datas.length-1) ? 'border-bottom':''}}">
+          <view class="section-item-cell {{cellIndex != 2 ? 'border-bottom':''}}">
             <image class='avatar' src='https://i.loli.net/2021/05/03/Xegxh8pkDKn3sNT.jpg'></image>
             <label class="name">{{cell}}</label>
           </view>
