--- a/miniprogram/pages/login/login.wxss
+++ b/miniprogram/pages/login/login.wxss
@@ -13,7 +13,7 @@ page{
 
  .header {
   width: 100%;
-  margin-top: 20px;
+  margin-top: 40rpx;
   text-align: center;
  }
  .header-img {
@@ -21,55 +21,66 @@ page{
   height: 400rpx;
  }
  .login-view { 
-  margin-top: 20px; 
-  flex: auto; 
-  height:100%; 
- } 
+  margin-top: 40rpx;
+  margin-left: 90rpx;
+  margin-right: 90rpx;
+  justify-self: center;
+ }
+
  .inputView {
   background-color: #fff; 
-  line-height: 44px; 
+  line-height: 88rpx; 
+  
+ }
+
+ .top {
+  border-top-left-radius: 10rpx;
+  border-top-right-radius: 10rpx;
+ }
+
+ .bottom {
+  border-bottom-left-radius: 10rpx;
+  border-bottom-right-radius: 10rpx;
  }
  
  .nameImage, .keyImage { 
-  margin-left: 22px;
+  margin-left: 44rpx;
   vertical-align: middle; 
-  width: 14px; 
-  height: 14px 
+  width: 28rpx; 
+  height: 28rpx 
  } 
   
  .loginLab { 
-  margin-left: 10px;
-  margin-right: 15px;
+  margin-left: 20rpx;
+  margin-right: 30rpx;
   vertical-align: middle; 
   color: #545454; 
-  font-size: 14px 
+  font-size: 28rpx 
  } 
+
  .inputText {
   float: right;
   text-align: right;
-  margin-right: 22px;
-  margin-top: 12px;
+  margin-right: 44rpx;
+  margin-top: 24rpx;
   color: #cccccc; 
-  font-size: 14px 
- } 
+  font-size: 28rpx 
+ }
   
  .line { 
   width: 100%; 
-  height: 1px; 
+  height: 2rpx; 
   background-color: #cccccc; 
-  margin-top: 1px; 
+  margin-top: 2rpx; 
  } 
 
  .loginBtnView { 
   width: 100%; 
   height: auto; 
   background-color: #f2f2f2; 
-  margin-top: 0px; 
-  margin-bottom: 0px; 
-  padding-bottom: 0px; 
  } 
   
  .loginBtn { 
   width: 80%; 
-  margin-top: 35px; 
+  margin-top: 70rpx; 
  } 
