--- a/miniprogram/pages/room/room.wxml
+++ b/miniprogram/pages/room/room.wxml
@@ -1,4 +1,4 @@
-<view class="container" style="{{containerStyle}}">
+<view class="container">
   <chatroom
     style="width: 100%; height: 100%"
     envId="{{chatRoomEnvId}}"
