--- a/miniprogram/pages/organization/member/member.wxml
+++ b/miniprogram/pages/organization/member/member.wxml
@@ -1,7 +1,7 @@
 <!--pages/organization/member/member.wxml-->
 <scroll-view scroll-y="true" scroll-into-view="{{alpha}}">
   <view class="alphabet-list">
-    <view wx:for="{{['a','b','c','d','e','f']}}" wx:key="unique" id="{{item.alphabet}}" class="section-item">
+    <view wx:for="{{['a','b','c','d','e','f']}}" wx:key="id" id="{{item.alphabet}}" class="section-item">
       <!--首字母-->
       <view class="section-item-header">{{item}}</view>
         <!--该首字母的成员-->
