成员列表云开发完成

--- a/miniprogram/pages/organization/member/member.wxml
+++ b/miniprogram/pages/organization/member/member.wxml
@@ -1,14 +1,14 @@
 <!--pages/organization/member/member.wxml-->
 <scroll-view scroll-y="true" scroll-into-view="{{alpha}}">
   <view class="alphabet-list">
-    <view wx:for="{{['a','b','c','d','e','f']}}" wx:key="id" id="{{item.alphabet}}" class="section-item">
+    <view wx:for="{{member_list}}" wx:key="id" id="{{item.alpha}}" class="section-item">
       <!--首字母-->
-      <view class="section-item-header">{{item}}</view>
+      <view class="section-item-header">{{item.alpha}}</view>
         <!--该首字母的成员-->
-        <view wx:for="{{['阿柒','伍六七','大宝']}}" wx:key="unique" wx:for-item="cell" wx:for-index="cellIndex" class="section-item-cells">
-          <view class="section-item-cell {{cellIndex != 2 ? 'border-bottom':''}}">
-            <image class='avatar' src='https://i.loli.net/2021/05/03/Xegxh8pkDKn3sNT.jpg'></image>
-            <label class="name">{{cell}}</label>
+        <view wx:for="{{item.list}}" wx:key="id" wx:for-item="cell" wx:for-index="cellIndex" class="section-item-cells">
+          <view class="section-item-cell {{cellIndex != item.list.length - 1 ? 'border-bottom':''}}">
+            <image class='avatar' src='{{cell.avatar}}'></image>
+            <label class="name">{{cell.name}}</label>
           </view>
         </view>
     </view>
