--- a/miniprogram/pages/organization/announcement/announcement.wxml
+++ b/miniprogram/pages/organization/announcement/announcement.wxml
@@ -1,11 +1,12 @@
 <!--pages/organization/announcement/announcement.wxml-->
+<wxs module="tools" src="../../../utils/tools.wxs"></wxs>
 <view class="container">
   <scroll-view scroll-y="true" class="announcement-list" wx:if="{{announcements.length > 0}}">
     <view class="announcement-cell" wx:for="{{announcements}}" wx:key="id">
       <view class="announcement-cell-padding"></view>
       <view class="announcement-cell-content">
-        <label class="announcement-text">{{item}}</label>
-        <label class="announcement-author">dawn 今天</label>
+        <label class="announcement-text">{{item.content}}</label>
+        <label class="announcement-author">{{item.author}} {{tools.toDate(create_time)}}</label>
       </view>
     </view>
   </scroll-view>
