--- a/miniprogram/pages/organization/announcement/announcement.wxml
+++ b/miniprogram/pages/organization/announcement/announcement.wxml
@@ -6,7 +6,7 @@
       <view class="announcement-cell-padding"></view>
       <view class="announcement-cell-content">
         <label class="announcement-text">{{item.content}}</label>
-        <label class="announcement-author">{{item.author}} {{tools.toDate(create_time)}}</label>
+        <label class="announcement-author">{{item.author}} {{tools.toDate(item.create_time)}}</label>
       </view>
     </view>
   </scroll-view>
