--- a/miniprogram/pages/organization/member/member.wxml
+++ b/miniprogram/pages/organization/member/member.wxml
@@ -1,18 +1,24 @@
 <!--pages/organization/member/member.wxml-->
 <view class="container">
   <scroll-view scroll-y="true" scroll-into-view="{{alpha}}">
-    <view class="alphabet-list">
-      <view wx:for="{{member_list}}" wx:key="id" id="{{item.alpha}}" class="section-item">
-        <!--首字母-->
-        <view class="section-item-header">{{item.alpha}}</view>
+    <view class="section-item">
+      <view wx:for="{{manage_list}}" wx:key="id" wx:for-item="cell" wx:for-index="cellIndex" class="section-item-cells">
+        <view class="section-item-cell {{cellIndex != item.list.length - 1 ? 'border-bottom':''}}" id="{{cellIndex}}" bindtap="manageMember">
+          <image class="avatar" src="{{cell.avatar}}"></image>
+          <label class="name">{{cell.name}}</label>
+        </view>
+      </view>
+    </view>
+    <view wx:for="{{member_list}}" wx:key="id" id="{{item.alpha}}" class="section-item">
+      <!--首字母-->
+      <view class="section-item-header">{{item.alpha}}</view>
           <!--该首字母的成员-->
           <view wx:for="{{item.list}}" wx:key="id" wx:for-item="cell" wx:for-index="cellIndex" class="section-item-cells">
             <view class="section-item-cell {{cellIndex != item.list.length - 1 ? 'border-bottom':''}}">
-              <image class='avatar' src='{{cell.avatar}}'></image>
+              <image class="avatar" src="{{cell.avatar}}"></image>
               <label class="name">{{cell.name}}</label>
             </view>
           </view>
-      </view>
     </view>
   </scroll-view>
 </view>
