--- a/miniprogram/pages/home/home.wxml
+++ b/miniprogram/pages/home/home.wxml
@@ -1,4 +1,6 @@
 <!--pages/home/home.wxml-->
+<import src="home.skeleton.wxml"/>
+<template is="skeleton" wx:if="{{loading}}"/>
 <view class="container">
 
   <view class="head">
