--- a/miniprogram/pages/organization/organization.wxss
+++ b/miniprogram/pages/organization/organization.wxss
@@ -1,4 +1,6 @@
 /* pages/organization/organization.wxss */
+@import "./organization.skeleton.wxss";
+
 .container {
   width: 100%;
   height: 100vh;
