聊天室开发完成

--- a/miniprogram/components/chatroom/chatroom.wxml
+++ b/miniprogram/components/chatroom/chatroom.wxml
@@ -12,7 +12,7 @@
       wx:for="{{chats}}"
       wx:key="{{item._id}}"
       id="item-{{index}}"
-      class="message {{openId == item._openid ? 'message__self' : ''}}"
+      class="message {{userId == item.user_id ? 'message__self' : ''}}"
     >
       <image 
         class="avatar"
@@ -20,7 +20,7 @@
         mode="scaleToFill"
       ></image> 
       <view class="main">
-        <view class="nickname">{{item.nickName}}</view>
+        <view class="nickname">{{item.name}}</view>
         <block wx:if="{{item.msgType === 'image'}}">
           <view class="image-wrapper">
             <view class="loading" wx:if="{{item.writeStatus > -1}}">{{item.writeStatus}}%</view>
